; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__deleted_in_index_modified_in_workdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__deleted_in_index_modified_in_workdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"who\00", align 1
@GIT_STATUS_WT_NEW = common dso_local global i32 0, align 4
@GIT_STATUS_INDEX_DELETED = common dso_local global i32 0, align 4
@stash_tip_oid = common dso_local global i32 0, align 4
@signature = common dso_local global i32 0, align 4
@GIT_STASH_DEFAULT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"stash@{0}^0:who\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"a0400d4954659306a976567af43125a0b1aa8595\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"stash@{0}^2:who\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_save__deleted_in_index_modified_in_workdir() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @repo, align 4
  %3 = call i32 @git_repository_index(i32** %1, i32 %2)
  %4 = load i32*, i32** %1, align 8
  %5 = call i32 @git_index_remove_bypath(i32* %4, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_index_write(i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @repo, align 4
  %11 = load i32, i32* @GIT_STATUS_WT_NEW, align 4
  %12 = load i32, i32* @GIT_STATUS_INDEX_DELETED, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @assert_status(i32 %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @repo, align 4
  %16 = load i32, i32* @signature, align 4
  %17 = load i32, i32* @GIT_STASH_DEFAULT, align 4
  %18 = call i32 @git_stash_save(i32* @stash_tip_oid, i32 %15, i32 %16, i32* null, i32 %17)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %21 = call i32 @assert_blob_oid(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0), i8* null)
  %22 = load i32*, i32** %1, align 8
  %23 = call i32 @git_index_free(i32* %22)
  ret void
}

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_index_remove_bypath(i32*, i8*) #1

declare dso_local i32 @git_index_write(i32*) #1

declare dso_local i32 @assert_status(i32, i8*, i32) #1

declare dso_local i32 @git_stash_save(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @assert_blob_oid(i8*, i8*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
